[tool.poetry]
name = "geoguessr-export"
version = "0.1.0"
description = ""
authors = ["Tyler Richardett <tyler.richardett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
loguru = "^0.7.2"
pydantic = "^2.4.2"
strenum = "^0.4.15"
pandas = "^2.2.0"
requests = "^2.31.0"
pycountry = "^23.12.11"
pygithub = "^2.2.0"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
bandit = { version = "1.7.5", extras = ["toml"] }
pre-commit = "3.3.1"
isort = "^5.12.0"
docformatter = "^1.7.5"
ipykernel = "^6.25.2"
ruff = "^0.1.14"

[tool.poetry.group.test.dependencies]
pytest-cov = "4.0.0"
pytest-mock = "<3.10.1"
pytest-runner = "^6.0.0"
pytest = "7.3.1"
pytest-github-actions-annotate-failures = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["geoguessr-export"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.docformatter]
recursive = true
pre-summary-newline = true
blank = true
in-place = true
black = true
style = "google"
